# chess-cpp

./: CMakeLists.txt
src/board/: Board.cpp  Board.h
src/piece/: Color.h  MoveType.h  Piece.cpp  Piece.h  PieceFactory.cpp  PieceFactory.h  PieceMove.cpp  PieceMove.h  PieceType.h
src/piece/strategy/: PawnStrategy.cpp  PawnStrategy.h  PieceMovingStrategy.h  RookStrategy.cpp  RookStrategy.h
src/player/: Player.cpp  Player.h  PlayerStrategy.h
src/utils/: Position.h
